--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <table width="200" border="0" align="center">
 	  <tbody>
 	    <tr>
-	      <td><img src="/Tienda/img/ImagenCabecera.jpg" alt="" width="626" height="101" class="nav"/></td>
+	      <td><img src="http://planidear.com.ar/Tienda/img/ImagenCabeceraProductos.jpg" alt="" width="626" height="101" class="nav"/></td>
         </tr>
       </tbody>
 </table>
