--- a/Login.html
+++ b/Login.html
@@ -5,11 +5,10 @@
 
  <link rel="stylesheet" href="http://planidear.com.ar/Tienda/css/estilo.css">
 	 <script type="text/javascript" src="js/Archivo.js"></script>
-	
 	 
 </head>
 
-<body>
+<body onLoad="MensajeAlerta()">
 	<header class="menu">
 				<nav>
 					<ul>
@@ -24,7 +23,7 @@
 	</nav>
 	
 	</header>
-	
+	<p><a href='#' onClick='MensajeAlerta'>Definir en un archivo externo</a></p>
 	<main>
 	
 		<section>
