--- a/Login.html
+++ b/Login.html
@@ -8,7 +8,7 @@
 	 
 </head>
 
-<body onLoad="MensajeAlerta()">
+<body>
 	<header class="menu">
 				<nav>
 					<ul>
@@ -23,7 +23,7 @@
 	</nav>
 	
 	</header>
-	<p><a href='#' onClick='MensajeAlerta'>Definir en un archivo externo</a></p>
+
 	<main>
 	
 		<section>
